mebuat tampilan semunya bersifat full layar secara responsif

--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@
   background-color: #e2edff;
 }
 
+.jumbotron {
+  background: url(img/3.jpg);
+  background-size: cover;
+  height: 540px;
+  position: relative;
+  z-index: -1;
+}
+
 /**kalau id harus pake tanda pagar **/
 #projects {
   background-color: #e2edff;
@@ -112,9 +120,4 @@
 
 .keyboard-box:hover .keyboard-img {
   transform: translate3d(-50%, -52%, 100px) rotate(-5deg) scale(1.2);
-}
-
-.container .iframe {
-  width: 1000px;
-  margin-right: 300px;
 }
