--- a/style_02.css
+++ b/style_02.css
@@ -8,6 +8,7 @@
   background: url(img/3.jpg);
   background-size: cover;
   height: 540px;
+  margin-top: 0px;
   position: relative;
   z-index: -1;
 }
