Menmabhakan fitur Blog

--- a/style_02.css
+++ b/style_02.css
@@ -13,6 +13,14 @@
   z-index: -1;
 }
 
+.keyboard-box {
+  position: relative;
+
+  border-radius: 10px;
+  height: 300px;
+  transform-style: preserve-3d;
+}
+
 .jumbotron::after {
   content: "";
   display: block;
@@ -166,12 +174,12 @@
 
   .jumbotron {
     margin-top: -90px;
-    height: 640px;
+    height: 520px;
   }
 
   .jumbotron .display-4 {
     font-size: 3em;
-    margin-top: 150px;
+    margin-top: 110px;
   }
 
   .workingspace {
