--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@
 
 .keyboard-box {
   position: relative;
-  background-color: #0c6efd;
+  background-color: rgb(255 255 255);
   border-radius: 10px;
-  height: 300px;
+  height: 400x;
   transform-style: preserve-3d;
 }
 
